--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["94768535137@s.whatsapp.net"],
-    "ownerName": "DINUWA LK OFFICIAL BOT",
-    "instagram" : "https://instagram.com/dinuwa_lk._",
-    "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "http://dinuwa-lk.github.io",
+    "ownerNumber": ["94711926730@s.whatsapp.net"],
+    "ownerName": "NIMA BOY OFFICIAL BOT",
+    "instagram" : "https://instagram.com/NIMA_lk._",
+    "botName": "NIMA😈-Mdོ ",
+    "footer": "https://chat.whatsapp.com/DXWYomEqZb92oqYcNFW9Mj",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
